# fast_basic

./: Dockerfile  README.md  app.py  pyproject.toml
